@@ -1,9 +1,9 @@
 #!/bin/sh
 
 cd /
-export PATH=/sbin:/bin:/usr/sbin:/usr/bin:/mod/sbin:/mod/bin:/mod/usr/sbin:/mod/usr/bin
-export LD_LIBRARY_PATH=/mod/lib:/mod/usr/lib
 export TERM=xterm
+
+. /etc/init.d/modlibrc
 
 start() {
 	echo "rc.mod version $(cat /etc/.freetz-version)"
@@ -20,11 +20,21 @@ start() {
 	/etc/init.d/rc.telnetd
 	/etc/init.d/rc.webcfg
 
+	# Static Packages
 	if [ -e /etc/static.pkg ]; then
 		for pkg in $(cat /etc/static.pkg); do
 			[ -x "/etc/init.d/rc.$pkg" ] && "/etc/init.d/rc.$pkg"
 		done
 	fi
+
+	# AVM-Plugins
+	echo -n "Starting AVM-Plugins..."
+	for plugin in `ls /var/plugin-*/control`;do
+		echo -n " `echo $plugin|sed 's/.*plugin-//;s/\/.*//'`"
+		$plugin start 2>&1 >/dev/null
+		[ $? -ne 0 ] && echo -n "(failed)"
+	done
+	echo "done."
 
 	[ -r /tmp/flash/rc.custom ] && . /tmp/flash/rc.custom
 
